hphp/test/zend/bad/ext/zlib/tests/bug61139.php
<?php

gzopen('someFile', 'c');
?>
<?php 
	unlink('someFile'); 
?>